--- a/index.html
+++ b/index.html
@@ -6,40 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- This is a placeholder for when you start using CSS -->
     <link rel="stylesheet" href="index.css" />
-    <title>Template</title>
+    <title>Asia Haslam's website</title>
   </head>
   <body>
     <header>
-      <h1>Your name</h1>
+      <h1>Asia Haslam</h1>
       <img src="profile.jpg" alt="me" />
     </header>
     <main>
       <section>
         <h2>About me</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
+          I am a public health student at BYU who loves web development.
         </p>
         <p>
-          Cursus sit amet dictum sit amet justo donec enim. Volutpat blandit
-          aliquam etiam erat velit scelerisque. Vestibulum lorem sed risus
-          ultricies tristique nulla. Amet mattis vulputate enim nulla aliquet
-          porttitor. Tellus integer feugiat scelerisque varius morbi. Et tortor
-          at risus viverra adipiscing at in. Pellentesque habitant morbi
-          tristique senectus et. Donec ac odio tempor orci. At ultrices mi
-          tempus imperdiet nulla malesuada. Pellentesque pulvinar pellentesque
-          habitant morbi tristique senectus. Libero justo laoreet sit amet
-          cursus sit amet. Aliquet lectus proin nibh nisl condimentum. Sit amet
-          massa vitae tortor condimentum lacinia quis vel.
-        </p>
-        <p>
-          Personalize this page to what you would like. This is your chance to
-          experiment and show off how awesome you are.
+          I also enjoy cooking, singing opera, crocheting, and playing the violin.
         </p>
       </section>
       <section>
