--- a/index.html
+++ b/index.html
@@ -26,14 +26,13 @@
       <section>
         <h2>Start up project</h2>
         <p>
-          This is where the description and link to my start up project will go.
+          See it<a href="https://startup.asiahaslam.com/">here.</a>
         </p>
       </section>
       <section>
         <h2>Simon project</h2>
         <p>
-          This is where the description and link to my implementation of the
-          Simon will go.
+          See it <a href="https://simon.asiahaslam.com/">here.</a>
         </p>
       </section>
       <section>
@@ -42,19 +41,19 @@
         <h3>HTML</h3>
         <ul>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/abKYRqN">Introduction</a>
+            <a href="https://codepen.io/asiahaslam/pen/YzjBEVW">Introduction</a>
             - Basic HTML page example
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/GRGBqbw">Structure</a> -
+            <a href="https://codepen.io/asiahaslam/pen/OJwdOZz">Structure</a> -
             All the elements for creating page structure
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/dyVdNej">Input</a> - All
+            <a href="https://codepen.io/asiahaslam/pen/wvxNPQX">Input</a> - All
             the elements for receiving user input
           </li>
           <li>
-            <a href="https://codepen.io/leesjensen/pen/OJEwgBa">Media</a> - All
+            <a href="https://codepen.io/asiahaslam/pen/yLqrVdX">Media</a> - All
             the elements for rendering media objects
           </li>
         </ul>
